# cookiecutter-invenio-module

./: .editorconfig  .kwalitee.yml  .travis.yml  AUTHORS.rst  LICENSE  README.rst  cookiecutter.json  run-tests.sh
.github/workflows/: tests.yml
docs/: conf.py  index.rst  make.bat
docs/source/: conf.py  index.rst
hooks/: post_gen_project.sh
scripts/: repocheck.py
{{ cookiecutter.project_shortname }}/: .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  babel.ini  docker-compose.test.yaml  pyproject.toml  pytest.ini  requirements-devel.txt  requirements-docs.txt  requirements.py  run-tests.sh  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_shortname }}/.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
{{ cookiecutter.project_shortname }}/.tx/: config
{{ cookiecutter.project_shortname }}/docs/: Makefile  api.rst  conf.py  examplesapp.rst  index.rst  license.rst  make.bat  usage.rst
{{ cookiecutter.project_shortname }}/docs/_ext/: ultramock.py
{{ cookiecutter.project_shortname }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_shortname }}/docs/source/_ext/: ultramock.py
{{ cookiecutter.project_shortname }}/examples/: app.py
{{ cookiecutter.project_shortname }}/invenio/modules/: __init__.py
{{ cookiecutter.project_shortname }}/invenio/modules/{{ cookiecutter.module_name }}/: __init__.py  version.py
{{ cookiecutter.project_shortname }}/misc/: header.jinja2  header.py  header.rst
{{ cookiecutter.project_shortname }}/tests/: __init__.py  conftest.py  test_example_app.py  test_examples_app.py  test_{{cookiecutter.package_name}}.py
{{ cookiecutter.project_shortname }}/{{ cookiecutter.package_name }}/: __init__.py  config.py  ext.py  version.py  views.py
{{ cookiecutter.project_shortname }}/{{ cookiecutter.package_name }}/templates/{{ cookiecutter.package_name }}/: base.html  index.html
{{ cookiecutter.project_shortname }}/{{ cookiecutter.package_name }}/translations/: messages.pot
