{% include "misc/header.py" %}

[project]
name = "{{ cookiecutter.project_shortname }}"
description = "{{ cookiecutter.description }}"
readme = "README.rst"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
keywords = [
  "Invenio",
  "TODO",
]
classifiers = [
  "Development Status :: 1 - Planning",
]
dependencies = [
  "invenio-base>=1.2.5,<2.0.0",
  "invenio-i18n>=2.0.0,<3.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/{{ cookiecutter.github_repo }}"

# -----------
# Entrypoints
# -----------

[project.entry-points."invenio_base.apps"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}:{{ cookiecutter.extension_class }}"

[project.entry-points."invenio_base.blueprints"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}.views:blueprint"

[project.entry-points."invenio_i18n.translations"]
{{ cookiecutter.package_name }} = "{{ cookiecutter.package_name }}"

# TODO: Edit these entry points to fit your needs.
# [project.entry-points."invenio_access.actions"]
# ... = "..."
# [project.entry-points."invenio_admin.actions"]
# ... = "..."
# [project.entry-points."invenio_assets.webpack"]
# ... = "..."
# [project.entry-points."invenio_base.api_apps"]
# ... = "..."
# [project.entry-points."invenio_base.api_blueprints"]
# ... = "..."
# [project.entry-points."invenio_celery.tasks"]
# ... = "..."
# [project.entry-points."invenio_db.models"]
# ... = "..."
# [project.entry-points."invenio_pidstore.minters"]
# ... = "..."
# [project.entry-points."invenio_records.jsonresolver"]
# ... = "..."

# ----------------------------
# Optional dependencies/extras
# ----------------------------

[project.optional-dependencies]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=1.3.4,<2.0.0",
  "pytest-black-ng>=0.4.0",
  "pytest-invenio>=2.1.0,<3.0.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ------------------
# Tool configuration
# ------------------

# Translation tools
# -----------------
# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format

[tool.babel]
[tool.babel.compile_catalog]
directory = "{{ cookiecutter.package_name }}/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "{{ cookiecutter.copyright_holder }}"
msgid_bugs_address = "{{ cookiecutter.author_email }}"
mapping_file = "pyproject.toml"
output_file = "{{ cookiecutter.package_name }}/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "{{ cookiecutter.package_name }}/translations/messages.pot"
output_dir = "{{ cookiecutter.package_name }}/translations/"

# Extraction from JS source files
[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

# Extraction from Python source files
[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

# Extraction from Jinja2 templates
[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

# Build system configuration
# --------------------------

[tool.hatch.version]
path = "{{ cookiecutter.package_name }}/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "/{{ cookiecutter.package_name }}",
]

[tool.hatch.build.targets.sdist]
include = [
  "/{{ cookiecutter.package_name }}",
]

# Linters and tests
# -----------------

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401,D403"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov={{ cookiecutter.package_name }} --cov-report=term-missing'
testpaths = "docs tests {{ cookiecutter.package_name }}"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
  ]
]
