{% include 'misc/header.py' %}

[metadata]
name = {{ cookiecutter.project_shortname }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = "{{ cookiecutter.description }}"
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
platforms = any
url = https://github.com/{{ cookiecutter.github_repo }}
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
zip_safe = False
install_requires =
    invenio-base>=1.2.5
    invenio-i18n>=1.3.1

[options.extras_require]
tests =
    pytest-invenio>=1.4.2
    sphinx>=4.2.0

[options.entry_points]
invenio_base.apps =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}:{{ cookiecutter.extension_class }}
invenio_base.blueprints =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.views:blueprint
invenio_i18n.translations =
    messages = {{ cookiecutter.package_name }}
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.bundles =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[pycodestyle]
exclude = docs/conf.py

[compile_catalog]
directory = {{ cookiecutter.package_name }}/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = {{ cookiecutter.copyright_holder }}
msgid_bugs_address = {{ cookiecutter.author_email }}
mapping-file = babel.ini
output-file = {{ cookiecutter.package_name }}/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = {{ cookiecutter.package_name }}/translations/messages.pot
output-dir = {{ cookiecutter.package_name }}/translations/

[update_catalog]
input-file = {{ cookiecutter.package_name }}/translations/messages.pot
output-dir = {{ cookiecutter.package_name }}/translations/
