{% include "misc/header.py" %}

[metadata]
name = {{ cookiecutter.project_shortname }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{ cookiecutter.description }}
long_description = file: README.rst, CHANGES.rst
keywords = invenio TODO
license = MIT
author = {{ cookiecutter.author_name }}
author_email = {{ cookiecutter.author_email }}
platforms = any
url = https://github.com/{{ cookiecutter.github_repo }}
classifiers =
    Development Status :: 1 - Planning

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    invenio-base>=1.2.5,<2.0.0
    invenio-i18n>=2.0.0,<3.0.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    pytest-invenio>=2.1.0,<3.0.0
    pytest-black-ng>=0.4.0
    sphinx>=4.5.0
# TODO: Check if the module uses search
elasticsearch7 =
    invenio-search[elasticsearch7]>=2.1.0,<3.0.0
opensearch1 =
    invenio-search[opensearch1]>=2.1.0,<3.0.0
opensearch2 =
    invenio-search[opensearch2]>=2.1.0,<3.0.0

[options.entry_points]
invenio_base.apps =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}:{{ cookiecutter.extension_class }}
invenio_base.blueprints =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.views:blueprint
invenio_i18n.translations =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}
# TODO: Edit these entry points to fit your needs.
# invenio_access.actions =
# invenio_admin.actions =
# invenio_assets.webpack =
# invenio_base.api_apps =
# invenio_base.api_blueprints =
# invenio_celery.tasks =
# invenio_db.models =
# invenio_pidstore.minters =
# invenio_records.jsonresolver =

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401,D403

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov={{ cookiecutter.package_name }} --cov-report=term-missing
testpaths = docs tests {{ cookiecutter.package_name }}

[compile_catalog]
directory = {{ cookiecutter.package_name }}/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = {{ cookiecutter.copyright_holder }}
msgid_bugs_address = {{ cookiecutter.author_email }}
mapping_file = babel.ini
output_file = {{ cookiecutter.package_name }}/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = {{ cookiecutter.package_name }}/translations/messages.pot
output_dir = {{ cookiecutter.package_name }}/translations/

[update_catalog]
input_file = {{ cookiecutter.package_name }}/translations/messages.pot
output_dir = {{ cookiecutter.package_name }}/translations/
